# Real-Time-Video-Stabilization

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  stabilize_video.cpp  video_stab_kalman.cpp
